Atualiza link do rodapé

--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
     <footer class="footer" id="mainFooter" style="display: none;">
       <div class="footer-content-grid">
         <div class="footer-left">
-          <a href="planos.html" class="btn-plus">Assinar versão Plus</a>
+          <a href="gerenciar.html" class="btn-plus">Gerenciar conta</a>
         </div>
         <div class="footer-center">
           <p class="instagram-text">Siga no Instagram: <a href="https://instagram.com/djcorreaoriginal" target="_blank">@djcorreaoriginal</a></p>
