fix: keep login background on mobile

--- a/public/login.html
+++ b/public/login.html
@@ -113,6 +113,12 @@
       }
     }
 
+    @media (max-width: 768px) {
+      body {
+        background: radial-gradient(ellipse at top, #0f0f23 0%, #050510 100%) !important;
+      }
+    }
+
     .subtitle {
       color: rgba(255, 255, 255, 0.7);
       margin-bottom: 1.5rem;
