fix mobile login background

--- a/public/login.html
+++ b/public/login.html
@@ -114,7 +114,7 @@
     }
 
     @media (max-width: 768px) {
-      body {
+      html, body {
         background: radial-gradient(ellipse at top, #0f0f23 0%, #050510 100%) !important;
       }
     }
