--- a/public/gerenciar.html
+++ b/public/gerenciar.html
@@ -2703,5 +2703,41 @@
             }
         }
     </script>
+    <script type="module">
+  import { getAuth, reauthenticateWithCredential, EmailAuthProvider, updatePassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+
+  const btn = document.getElementById('btnAlterarSenha');
+  if (btn) {
+    btn.addEventListener('click', async () => {
+      const senhaAtual = document.getElementById('senhaAtual')?.value;
+      const novaSenha = document.getElementById('novaSenha')?.value;
+      const confirmarSenha = document.getElementById('confirmarSenha')?.value;
+
+      if (!senhaAtual || !novaSenha || !confirmarSenha) {
+        return alert('Preencha todos os campos.');
+      }
+
+      if (novaSenha !== confirmarSenha) {
+        return alert('A nova senha e a confirmação não coincidem.');
+      }
+
+      try {
+        const auth = getAuth();
+        const user = auth.currentUser;
+        if (!user) throw new Error('Usuário não autenticado');
+
+        const credential = EmailAuthProvider.credential(user.email, senhaAtual);
+
+        await reauthenticateWithCredential(user, credential);
+        await updatePassword(user, novaSenha);
+
+        alert('Senha alterada com sucesso!');
+      } catch (err) {
+        console.error(err);
+        alert('Erro ao alterar senha: ' + (err.message || 'Tente novamente.'));
+      }
+    });
+  }
+</script>
 </body>
 </html>
