--- a/public/gerenciar.html
+++ b/public/gerenciar.html
@@ -1686,6 +1686,7 @@
                     showNotification('✅ Assinatura cancelada com sucesso!', 'success');
                     document.querySelector('.plan-badge').textContent = 'FREE MEMBER';
                     document.querySelector('.plan-badge').className = 'plan-badge';
+                    document.querySelector('.plan-badge').style.background = 'linear-gradient(45deg, var(--bg-tertiary), var(--silver))';
                 })
                 .catch(() => {
                     showNotification('❌ Erro ao cancelar assinatura', 'error');
@@ -2690,9 +2691,7 @@
         }
 
         function cancelarAssinatura() {
-            if (confirm('Tem certeza que deseja cancelar sua assinatura?')) {
-                alert('Assinatura cancelada.');
-            }
+            cancelSubscription();
         }
 
         function excluirConta() {
